x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

0.15.0
======

Release date:

Tue, 11 Nov 2025 19:07:20 +0200

New features:

* Fix GitHub Issue #29: Implement a pattern play order view
  - Play order is now displayed below the main tool bar
  - Clicking on a position will jump to the position

* Append soloed column names to the audio output filename

Bug fixes:

* Fix velocity interpolation on a selection not applied on all columns

* Fix incorrect values in the delay calculator dialog

Other:

* Take the lowest free track index when adding a new track

* Enable solo/mute during playback

0.14.1
======

Release date:

Sat, 18 Oct 2025 21:14:00 +0300

New features:

Bug fixes:

* Fix incorrect check for pattern validity

0.14.0
======

Release date:

Fri, 17 Oct 2025 20:11:55 +0300

New features:

* Add a virtual keyboard to the instrument settings

* Improve track focus highlights

* Implement help dialog for shortcuts

* Make it possible to transpose selection by +6/-6 semitones

* Show text if no pitch bend automations added

* Show text if no MIDI CC automations added

Bug fixes:

* Fix graphical glitches due to not all patterns getting resized

Other:

* Optimize track resizing

* Don't scroll columns that are not visible
  - This greatly improves scrolling performance

* Change header font family to sans

0.13.0
======

Release date:

Mon, 06 Oct 2025 21:25:24 +0300

New features:

* Implement random velocity jitter in instrument settings

* Show track index in the track settings dialog

* Show track index in the track header tool tip

* Adjustable audio buffer size

* Adjustable track header font size

* Add tabs to track settings dialog

* Implement custom auto note-off offset
  - Auto note-off offset can be set per-instrument
  - Adds tabs to the track settings dialog

Bug fixes:

* Fix auto note-off offset calculation

* Fix binding loops in EditMidiCcAutomationsDelegate.qml

Other:

0.12.0
======

Release date:
