@@ -191,11 +191,11 @@ public:
     Q_INVOKABLE void requestSelectionTranspose(int semitones);
 
     //! Performs linear interpolation on velocity on current column over given lines.
-    Q_INVOKABLE void requestLinearVelocityInterpolationOnColumn(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue);
+    Q_INVOKABLE void requestLinearVelocityInterpolationOnColumn(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue, bool usePercentages);
     //! Performs linear interpolation on velocity on current column over given lines.
-    Q_INVOKABLE void requestLinearVelocityInterpolationOnTrack(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue);
+    Q_INVOKABLE void requestLinearVelocityInterpolationOnTrack(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue, bool usePercentages);
     //! Performs linear interpolation on velocity on currently selected columns.
-    Q_INVOKABLE void requestLinearVelocityInterpolationOnSelection(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue);
+    Q_INVOKABLE void requestLinearVelocityInterpolationOnSelection(quint64 startLine, quint64 endLine, quint8 startValue, quint8 endValue, bool usePercentages);
 
     Q_INVOKABLE void setDelayOnCurrentLine(quint8 ticks);
     Q_INVOKABLE quint8 delayAtCurrentPosition() const;
