@@ -8,6 +8,9 @@ Dialog {
     id: rootItem
     modal: true
     standardButtons: Dialog.Ok | Dialog.Cancel
+    function usePercentages() {
+        return percentageCheckBox.checked;
+    }
     function setTitle(text) {
         title = "<strong>" + text + "</strong>";
     }
@@ -38,10 +41,31 @@ Dialog {
     contentItem: GridLayout {
         rowSpacing: 10
         width: parent.width
+        CheckBox {
+            id: percentageCheckBox
+            text: qsTr("Use percentages")
+            Layout.columnSpan: 4
+            Layout.row: 0
+            onCheckedChanged: {
+                if (checked) {
+                    startValueSpinBox.from = 0;
+                    startValueSpinBox.to = 200;
+                    endValueSpinBox.from = 0;
+                    endValueSpinBox.to = 200;
+                    if (startValueSpinBox.value > 200) startValueSpinBox.value = 200;
+                    if (endValueSpinBox.value > 200) endValueSpinBox.value = 200;
+                } else {
+                    startValueSpinBox.from = 0;
+                    startValueSpinBox.to = 127;
+                    endValueSpinBox.from = 0;
+                    endValueSpinBox.to = 127;
+                }
+            }
+        }
         Label {
             text: qsTr("Start value:")
             Layout.column: 0
-            Layout.row: 0
+            Layout.row: 1
         }
         SpinBox {
             id: startValueSpinBox
@@ -54,13 +78,13 @@ Dialog {
                 focus = false;
             }
             Layout.column: 1
-            Layout.row: 0
+            Layout.row: 1
             Layout.fillWidth: true
         }
         Label {
             text: " " + qsTr("End value:")
             Layout.column: 2
-            Layout.row: 0
+            Layout.row: 1
         }
         SpinBox {
             id: endValueSpinBox
@@ -73,14 +97,14 @@ Dialog {
                 focus = false;
             }
             Layout.column: 3
-            Layout.row: 0
+            Layout.row: 1
             Layout.fillWidth: true
         }
         Label {
             text: qsTr("Start line:")
             width: parent.width
             Layout.column: 0
-            Layout.row: 1
+            Layout.row: 2
         }
         SpinBox {
             id: startLineSpinBox
@@ -93,13 +117,13 @@ Dialog {
                 focus = false;
             }
             Layout.column: 1
-            Layout.row: 1
+            Layout.row: 2
             Layout.fillWidth: true
         }
         Label {
             text: " " + qsTr("End line:")
             Layout.column: 2
-            Layout.row: 1
+            Layout.row: 2
         }
         SpinBox {
             id: endLineSpinBox
@@ -112,7 +136,7 @@ Dialog {
                 focus = false;
             }
             Layout.column: 3
-            Layout.row: 1
+            Layout.row: 2
             Layout.fillWidth: true
         }
     }
