@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Add percentage interpolation to velocity dialog
+
 Bug fixes:
 
 Other:
